<resources>
    <string name="app_name">Harit-Brij</string>
    <string name="choose_language">Please Choose your Language</string>
    <string name="title_activity_maps">MapsActivity</string>




    <string name="selectLangHeading">Select the language</string>
    <string name="SearchByName">Search By Name</string>
    <string name="Hindi" translatable="false">हिन्दी</string>
    <string name="Admin">Admin</string>
    <string name="User">User</string>
    <string name="SelectProfile">Select the Profile</string>
    <string name="Signin">Sign in</string>
    <string name="mobile">Enter the registered mobile number</string>
    <string name="DontHaveAnAccount">Dont have an account?</string>
    <string name="Register">Register here</string>
    <string name="OTP">OTP Verification</string>
    <string name="Submit">Send OTP</string>
    <string name="SendOTP">Enter the OTP send on your registered mobile number</string>
    <string name="SubmitOTP">Submit</string>
    <string name="Registeration">Register</string>
    <string name="EnterUsername">Enter Username</string>
    <string name="EnterMobileNumber">Enter mobile number</string>
    <string name="NumberOfTrees">Number of trees</string>
    <string name="RegisterMobileNumber">Submit mobile number</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="SignInrhere">Sign in</string>
    <string name="NameOfOrg">Name of Organization</string>
    <string name="MobileNumber">Mobile Number :</string>
    <string name="RegisteredTrees">Registered number of trees :</string>
    <string name="RegNumber">Registration number :</string>
    <string name="RegisterTree">Tree Register</string>
    <string name="TreeProfile">Tree Profile</string>
    <string name="Map">Map</string>
    <string name="AdminProfile">Name of Admin</string>
    <string name="DataView">Data View</string>
    <string name="SearchByUTID">Search by UTID</string>
    <string name="Search">Search</string>
    <string name="District">District</string>
    <string name="Block">Block</string>
    <string name="Village">Village</string>
    <string name="Species">Species</string>
    <string name="UTID">UTID</string>
    <string name="download">Download</string>
    <string name="password">Password</string>
    <string name="upload">Upload</string>
    <string name="status">Status</string>
    <string name="Dead">Dead</string>
    <string name="Alive">Alive</string>
    <string name="preference_file_key" translatable="false">com.haritbrij.haritbrij.PREFERENCE_FILE_KEY</string>
    <string name="user_language" translatable="false">user_language</string>
    <string name="plantedTrees" translatable="false">Planted trees :</string>
    <string-array name="District">
        <item>All(District)</item>
        <item>Mathura</item>
    </string-array>

    <string-array name="Block">
        <item>All(Block)</item>
        <item>Vrindavan</item>
    </string-array>

    <string-array name="Villages">
        <item>All(Villages)</item>
        <item>Jait</item>
        <item>Chaumuhan</item>
        <item>Agra</item>
    </string-array>

    <string-array name="Species">
        <item>All(Species)</item>
        <item>Mango</item>
        <item>Papaya</item>
        <item>Guava</item>
    </string-array>
    <string-array name="Status">
        <item>Alive</item>
        <item>Dead</item>
    </string-array>

    <string-array name="DistrictRegister">
        <item>Mathura</item>
    </string-array>

    <string-array name="BlockRegister">
        <item>Vrindavan</item>
    </string-array>

    <string-array name="VillagesRegister">
        <item>Jait</item>
        <item>Chaumuhan</item>
        <item>Agra</item>
    </string-array>
    <string-array name="SpeciesRegister">
        <item>Mango</item>
        <item>Papaya</item>
        <item>Guava</item>
    </string-array>

    <string-array name="Organization">
        <item>RSS</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_choose_language" translatable="false">ChooseLanguageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
</resources>