<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity"
    android:background="@color/white">



    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-41dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="436dp"
        android:background="@drawable/gradient_drawable"
        android:text="TextView" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="273dp"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-11dp"
        app:srcCompat="@drawable/harit_brij_logos_transparent_removebg_preview"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="264dp"
        android:text="@string/Registeration"
        android:textColor="#050505"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="378dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="341dp"
        android:background="@drawable/strokebhagwa"
        android:ems="10"
        android:hint="@string/EnterUsername"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColorHint="#878484" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="378dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="257dp"
        android:background="@drawable/strokebhagwa"
        android:ems="10"
        android:hint="@string/EnterMobileNumber"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColorHint="#878484" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="378dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/strokebhagwa"
        android:ems="10"
        android:hint="@string/RegisteredTrees"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColorHint="#878484" />

    <Button
        android:id="@+id/submit_registration_details_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:background="@drawable/gradientbhagwa"
        android:text="@string/RegisterMobileNumber" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="68dp"
        android:text="@string/HaveAccount"
        android:textColor="#050505"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="68dp"
        android:text="@string/SignInrhere"
        android:textColor="#01398C"
        android:textSize="20dp" />


</RelativeLayout>