<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".loginScreenUser">


        <include
            android:id="@+id/secondupperpart"
            layout="@layout/secondupperpart"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView86"
            android:layout_width="377dp"
            android:layout_height="319dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/stroke1"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/secondupperpart"
            app:layout_constraintStart_toStartOf="@+id/secondupperpart"
            app:layout_constraintTop_toBottomOf="@+id/secondupperpart" />

        <TextView
            android:id="@+id/textView87"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Signin"
            android:textColor="#050505"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/secondupperpart"
            app:layout_constraintStart_toStartOf="@+id/secondupperpart"
            app:layout_constraintTop_toTopOf="@+id/textView86" />

        <TextView
            android:id="@+id/textView88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/mobile"
            android:textColor="#050505"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="@+id/textView86"
            app:layout_constraintTop_toBottomOf="@+id/textView87" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/stroke1"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textView88"
            app:layout_constraintTop_toBottomOf="@+id/textView88" />

        <Button
            android:id="@+id/button4"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/gradientbhagwa"
            android:text="@string/Submit"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/DontHaveAnAccount"
            android:textColor="#050505"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <TextView
            android:id="@+id/textView90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Register"
            android:textColor="#01398C"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView89"
            app:layout_constraintTop_toTopOf="@+id/textView89" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
