<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginScreenAdmin">


        <include
            android:id="@+id/secondupperpart"
            layout="@layout/secondupperpart"
            android:layout_width="match_parent"
            android:layout_height="216dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="377dp"
            android:layout_height="319dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/stroke1"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/secondupperpart"
            app:layout_constraintStart_toStartOf="@+id/secondupperpart"
            app:layout_constraintTop_toBottomOf="@+id/secondupperpart" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Signin"
            android:textColor="#050505"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/secondupperpart"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/secondupperpart"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/stroke1"
            android:ems="10"
            android:hint="@string/EnterUsername"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#959494"
            app:layout_constraintEnd_toEndOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/stroke1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#8E8B8B"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
            android:padding="10dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/gradientbhagwa"
            android:text="@string/SubmitOTP"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName11"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName11"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
