<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TreeRegister">


    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-41dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="436dp"
        android:background="@drawable/gradient_drawable"
        android:text="TextView" />


    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="273dp"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-11dp"
        android:alpha="0.5"
        app:srcCompat="@drawable/harit_brij_logos_transparent_removebg_preview" />


    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="154dp"
        android:layout_height="142dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="492dp"
        app:srcCompat="@drawable/maleavatar_removebg_preview" />


    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="560dp"
        android:text="@string/MobileNumber"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="524dp"
        android:text="@string/RegisteredTrees"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="484dp"
        android:text="@string/RegNumber"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="562dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="526dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="486dp"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginBottom="594dp"
        android:ems="10"
        android:hint="@string/NameOfOrg"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="358dp"
        android:ems="10"
        android:hint="@string/NameOfOrg"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#575656" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="242dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="344dp"
        app:srcCompat="@drawable/earth_day_campaign_hand_showing_tree_bubble_media_mix" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="298dp"
        android:text="@string/District"
        android:textColor="#050505"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="256dp"
        android:text="@string/Block"
        android:textColor="#050505"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="217dp"
        android:text="@string/Village"
        android:textColor="#050505"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="176dp"
        android:text="@string/Species"
        android:textColor="#050505"
        android:textSize="22dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/district"
        android:layout_width="207dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="198dp"
        android:layout_marginBottom="295dp"
        android:background="@drawable/stroke"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/block"
        android:layout_width="207dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="198dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="252dp"
        android:background="@drawable/stroke"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/village"
        android:background="@drawable/stroke"
        android:layout_width="207dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/species"
        android:layout_width="207dp"

        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="198dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="169dp"
        android:background="@drawable/stroke"
        android:spinnerMode="dropdown" />



</RelativeLayout>